addedmore comments on other pages/views

--- a/Views/Home/ApproveClaim.cshtml
+++ b/Views/Home/ApproveClaim.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
+    <!-- Header with navigation menu -->
     <header>
         <div class="header-container">
             <h1>CSCM</h1>
@@ -28,9 +29,10 @@
         </div>
     </header>
     <div class="content">
-
+        <!-- Approve Claim Page -->
         <div id="track-claims" class="page">
             <h2>Approve Claims</h2>
+            <!-- Claims table displaying all claim information -->
             <table>
                 <thead>
                     <tr>
@@ -50,6 +52,7 @@
                     </tr>
                 </thead>
                 <tbody>
+					<!-- Claim 1 - Approved -->
                     <tr>
                         <td class="claim-id">CLAIM-001</td>
                         <td class="user-id">L103251</td>
@@ -70,6 +73,7 @@
                             </div>
                         </td>
                     </tr>
+					<!-- Claim 2 - Rejected -->
                     <tr>
                         <td class="claim-id">CLAIM-002</td>
                         <td class="user-id">L102895</td>
@@ -90,6 +94,7 @@
                             </div>
                         </td>
                     </tr>
+					<!-- Claim 3 - Pre-Approved -->
                     <tr>
                         <td class="claim-id">CLAIM-003</td>
                         <td class="user-id">L103251</td>
@@ -115,6 +120,7 @@
         </div>
 
     </div>
+    <!-- Footer with copyright information -->
     <footer>
         <div class="foot_container">
             &copy; 2025 - Contract Monthly Claim System (CMCS) | Designed for independent contractors' use
