--- a/Views/Home/Profile.cshtml
+++ b/Views/Home/Profile.cshtml
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
+    <!-- Header with navigation menu -->
     <header>
         <div class="header-container">
             <h1>CSCM</h1>
@@ -181,6 +182,7 @@
             </div>
         </div>
     </div>
+    <!-- Footer with copyright information -->
     <footer>
         <div class="foot_container">
             &copy; 2025 - Contract Monthly Claim System (CMCS) | Designed for independent contractors' use
